# realboy

./: README  README.md  meson.build  meson_options.txt
include/: conf.h  cpu.h  iopoll.h  ipc.h  joy.h  keys.h  list.h  mbc.h  mbc1.h  mbc3.h  mem.h  monitor.h  ppu.h  render.h  server.h  sgb.h  sound.h  wayland.h
include/backend/: backends.h  evdev.h  pipewire.h  wayland.h
include/backends/: backends.h  evdev.h  pipewire.h  wayland.h
ipc/: ipc.c
monitor/: client.c  client.h  disasm.c  disasm.h  main.c  meson.build
monitor/tui/: cli.c  cli.h  tui.c  tui.h
realboy/: backends.c  conf.c  conf.h  cpu.h  list.c  main.c  mbc.h  mbc2.h  mbc5.h  meson.build  mon.c  mon.h  monitor.c  ppu.c  ppu.h  render.c  server.c  server.h  sgb.c  sound.c
realboy/backend/: backends.c
realboy/backend/evdev/: evdev.c
realboy/backend/wayland/: wayland.c
realboy/backend/wayland/protocols/: meson.build
realboy/cpu/: cpu.c  cpu.h  cpu_ops.c
realboy/emu/: ppu.c
realboy/emu/cpu/: cpu.c  cpu_ops.c
realboy/emu/mem/: mbc1.c
realboy/evdev/: backend.c  evdev.h
realboy/mem/: mbc.c  mbc.h  mbc1.c  mbc1.h  mbc3.c  mbc5.c
realboy/pipewire/: backend.c
realboy/wayland/: wayland.c  wayland.h
src/: iopoll.c  list.c  main.c  meson.build  monitor.c  server.c
src/backends/: backends.c
src/backends/evdev/: backend.c  evdev.c
src/backends/pipewire/: backend.c  pipewire.c
src/backends/wayland/: backend.c
src/emu/mem/: mbc.c  mbc.h
