option(
	'libemu',
	type: 'boolean',
	value: true,
	description: 'Enable support for libemu'
)

option(
	'wayland-backend',
	type: 'boolean',
	value: true,
	description: 'Enable support for wayland backend'
)

option(
	'pipewire-backend',
	type: 'boolean',
	value: true,
	description: 'Enable support for pipewire backend'
)

option(
	'evdev-backend',
	type: 'boolean',
	value: true,
	description: 'Enable support for evdev backend'
)
